# Maxima

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  changes.md  maxima-qrc-handler.sh  todo.md
.github/workflows/: build-ci.yml  release.yml
MaximaHelper/: Info.plist  build.sh
MaximaHelper/Sources/: main.swift
installer/: build.sh  maxima-setup.nsi
maxima-bootstrap/: Cargo.toml  build.rs
maxima-bootstrap/src/: main.rs
maxima-cli/: Cargo.toml
maxima-cli/src/: main.rs
maxima-lib/: Cargo.toml
maxima-lib/src/: auth_server.rs  lib.rs  steam.rs
maxima-lib/src/content/: downloader.rs  manager.rs  mod.rs  zip.rs  zlib.rs
maxima-lib/src/core/: background_service_nix.rs  background_service_win.rs  cache.rs  clients.rs  cloudsync.rs  dip.rs  ecommerce.rs  endpoints.rs  error.rs  launch.rs  library.rs  locale.rs  mod.rs  service_layer.rs  settings.rs
maxima-lib/src/lsx/: connection.rs  mod.rs  service.rs  types.rs  winproc.rs
maxima-lib/src/ooa/: mod.rs
maxima-native/: Cargo.toml
maxima-native/src/: lib.rs
maxima-service/: Cargo.toml
maxima-service/src/: main.rs
maxima-tui/: Cargo.toml
maxima-tui/src/: main.rs  service.rs
maxima-ui/: Cargo.toml
maxima-ui/res/: untitled.blend  untitled.blend1
maxima-ui/shaders/: abg.frag  abg.vert  gvbg.frag  gvbg.vert
maxima-ui/src/: bridge_processor.rs  bridge_thread.rs  desktop.rs  enum_locale_map.rs  event_processor.rs  event_thread.rs  frontend_processor.rs  game_info_image_handler.rs  game_view_bg_renderer.rs  interact_thread.rs  main.rs  translation_manager.rs  ui_image.rs
(+68 files in other folders)
